--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   
   <!-- style -->
   <!-- build:css ../assets/css/site.min.css -->
-  <link rel="stylesheet" href="../assets/css/bootstrap.css" type="text/css" />
-  <link rel="stylesheet" href="../assets/css/i-con.css" type="text/css" />
-  <link rel="stylesheet" href="../assets/css/theme.css" type="text/css" />
-  <link rel="stylesheet" href="../assets/css/style.css" type="text/css" />
+  <link rel="stylesheet" href="assets/css/bootstrap.css" type="text/css" />
+  <link rel="stylesheet" href="assets/css/i-con.css" type="text/css" />
+  <link rel="stylesheet" href="assets/css/theme.css" type="text/css" />
+  <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
   <!-- endbuild -->
 </head>
 <body class="layout-column">
@@ -1186,20 +1186,20 @@
 
   <!-- build:js ../assets/js/site.min.js -->
   <!-- jQuery -->
-  <script src="../libs/jquery/dist/jquery.min.js"></script>
+  <script src="libs/jquery/dist/jquery.min.js"></script>
   <!-- Bootstrap -->
-  <script src="../libs/popper.js/dist/umd/popper.min.js"></script>
-  <script src="../libs/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="libs/popper.js/dist/umd/popper.min.js"></script>
+  <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
   <!-- ajax page -->
-  <script src="../libs/pace-progress/pace.min.js"></script>
-  <script src="../libs/pjax/pjax.js"></script>
-  <script src="../assets/js/ajax.js"></script>
+  <script src="libs/pace-progress/pace.min.js"></script>
+  <script src="libs/pjax/pjax.js"></script>
+  <script src="assets/js/ajax.js"></script>
   <!-- lazyload plugin -->
-  <script src="../assets/js/lazyload.config.js"></script>
-  <script src="../assets/js/lazyload.js"></script>
-  <script src="../assets/js/plugin.js"></script>
+  <script src="assets/js/lazyload.config.js"></script>
+  <script src="assets/js/lazyload.js"></script>
+  <script src="assets/js/plugin.js"></script>
   <!-- theme -->
-  <script src="../assets/js/theme.js"></script>
+  <script src="assets/js/theme.js"></script>
   <!-- endbuild -->
 </body>
 </html>
